--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,10 @@
     background: url("img
 /nentet.jpg") no-repeat center center;
     background-size: cover; /*Hình ảnh có thể bị cắt để lấp đầy toàn bộ phần tử*/
-    padding-top: 100rem;
-    padding-bottom: 100rem;
+    padding-top: 12rem;
+    padding-bottom: 12rem;
     text-align: center !important;
-    color: black; !important;
+    color: white; !important;
     font-size: 25px;
 }
 
@@ -63,4 +63,14 @@
 }
 a:hover{
     color: magenta
+body{
+  background-image: url("img/nentet.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+.title{
+  color: black;
+}
 
